--- a/style.css
+++ b/style.css
@@ -25,10 +25,8 @@ header {
 }
 
 nav {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 10px 20px;
+  text-align: center;
+  margin-top: 20px;
 }
 
 .logo {
