--- a/style.css
+++ b/style.css
@@ -39,11 +39,14 @@ nav {
   gap: 20px;
 }
 
-.nav-links a {
-  color: #fff;
-  text-decoration: none;
-  font-weight: bold;
+.nav-links {
+  list-style: none;
+  display: inline-flex;
+  justify-content: center;
+  gap: 25px;
+  padding: 10px 20px;
 }
+
 
 main {
   padding-top: 80px;
