--- a/style.css
+++ b/style.css
@@ -215,4 +215,10 @@ footer {
 .center-tile {
   justify-content: center;
 }
+.programs-coming-soon img {
+  width: 100%;
+  height: auto;
+  display: block;
+  max-width: 100%;
+}
 
